// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PermissionHint Snapshot with blocked permission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 159,
        "justifyContent": "space-between",
        "width": 259,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#939393",
            "borderColor": "#939393",
            "borderRadius": 16,
            "borderWidth": 3,
            "elevation": 8,
            "height": 45,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
            "width": 150,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          GO TO SETTINGS!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test PermissionHint Snapshot with denied permission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 159,
        "justifyContent": "space-between",
        "width": 259,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#939393",
            "borderColor": "#939393",
            "borderRadius": 16,
            "borderWidth": 3,
            "elevation": 8,
            "height": 45,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
            "width": 150,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          GOT IT!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test PermissionHint Snapshot with granted permission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "height": 159,
        "justifyContent": "space-between",
        "width": 259,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#939393",
            "borderColor": "#939393",
            "borderRadius": 16,
            "borderWidth": 3,
            "elevation": 8,
            "height": 45,
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 10,
            "width": 150,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        >
          GOT IT!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
